Fixed a bug on mobile devices where the soundboard was misplaced

--- a/style.css
+++ b/style.css
@@ -388,7 +388,6 @@ input[type=range]::-webkit-slider-runnable-track {
     position: absolute;
     display: table;
     overflow: visible;
-    top: 50em;
     width: 100%;
     height: 100%;
     padding-top: 1em;
